--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "selim-can-ozdemir",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://selimcan.com/",
+  "homepage": "https://0xselfdestruct.github.io/",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
